--- a/app/src/main/res/layout/activity_post_write.xml
+++ b/app/src/main/res/layout/activity_post_write.xml
@@ -27,7 +27,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginRight="6dp"
                 android:background="@drawable/ic_baseline_check_24"
-                android:backgroundTint="@color/Sub_Tutle_Color">
+                android:backgroundTint="@color/Transparent_Green">
             </de.hdodenhof.circleimageview.CircleImageView>
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Post_Write_BackPress_Imv"
@@ -91,16 +91,14 @@
         </RelativeLayout>
         <RelativeLayout
             android:background="@color/Theme_Color"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:paddingTop="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/Dialog_Posting_Content_Container">
             <LinearLayout
                 android:id="@+id/Post_Write_Btns_Container"
                 android:orientation="horizontal"
-                android:layout_alignParentLeft="true"
+                android:paddingTop="2dp"
+                android:layout_alignParentTop="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <RelativeLayout
@@ -135,8 +133,8 @@
             </LinearLayout>
         <FrameLayout
             android:id="@+id/Post_Write_FrameLayout"
-       android:layout_below="@id/Post_Write_Btns_Container"
-                 android:background="@android:color/transparent"
+            android:layout_below="@id/Post_Write_Btns_Container"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false"
@@ -147,8 +145,8 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/Post_Write_ViewPager2"
                 android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="220dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
             </androidx.viewpager2.widget.ViewPager2>
             </RelativeLayout>
         </FrameLayout>
