--- a/app/src/main/res/layout/chatting_list_item.xml
+++ b/app/src/main/res/layout/chatting_list_item.xml
@@ -11,10 +11,10 @@
         android:src="@drawable/user_profile_default_img"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        app:civ_border_color="@color/Sub_Tutle_Color"
+        app:civ_border_color="@color/Theme_Text_Color"
         app:civ_border_width="0.5dp"
-        android:layout_width="55dp"
-        android:layout_height="55dp">
+        android:layout_width="50dp"
+        android:layout_height="50dp">
     </de.hdodenhof.circleimageview.CircleImageView>
     <TextView
         android:id="@+id/Chatting_List_User_Name_TV"
@@ -25,17 +25,16 @@
         android:fontFamily="@font/notosans_medium"
         android:includeFontPadding="false"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="4dp"
         android:textSize="15dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/Chatting_List_User_Img_Civ">
     </TextView>
     <TextView
         android:id="@+id/Chatting_List_Last_Chat_TV"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="6dp"
         android:textSize="14dp"
         android:text="마지막 채팅"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="4dp"
         android:includeFontPadding="false"
         android:layout_below="@id/Chatting_List_User_Name_TV"
         android:fontFamily="@font/notosans_regular"
