--- a/app/src/main/res/layout/activity_user_profile_view.xml
+++ b/app/src/main/res/layout/activity_user_profile_view.xml
@@ -66,7 +66,7 @@
                     android:layout_marginTop="6dp"
                     android:layout_marginLeft="6dp"
                     android:src="@drawable/default_profile_img"
-                    app:civ_border_color="@color/Sub_Tutle_Color"
+                    app:civ_border_color="@color/Transparent_Green"
                     app:civ_border_width="1dp">
                 </de.hdodenhof.circleimageview.CircleImageView>
 
@@ -123,7 +123,7 @@
                                 android:textSize="14dp"
                                 android:fontFamily="@font/notosans_medium"
                                 android:includeFontPadding="false"
-                                android:textColor="@color/Theme_Text_Color"
+                                android:textColor="@color/white"
                                 android:background="@drawable/state_friend_btn_shape"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent">
