--- a/app/src/main/res/layout/timepeed_post_item.xml
+++ b/app/src/main/res/layout/timepeed_post_item.xml
@@ -2,31 +2,32 @@
 <layout>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
+    android:layout_height="50dp"
     android:layout_marginRight="6dp"
     android:layout_marginLeft="6dp"
-    android:background="@android:color/transparent"
+    android:background="@color/Theme_Color"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Timepeed_Post_User_CIV"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/default_profile_img"
         android:layout_centerInParent="true"
         android:layout_alignParentLeft="true"
-        app:civ_border_color="@color/Sub_Tutle_Color"
+        app:civ_border_color="@color/Theme_Text_Color"
         app:civ_border_width="0.5dp">
     </de.hdodenhof.circleimageview.CircleImageView>
     <RelativeLayout
-        android:layout_marginLeft="6dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="12dp"
         android:layout_toRightOf="@+id/Timepeed_Post_User_CIV"
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TextView
         android:id="@+id/Timepeed_PostText"
         android:textColor="@color/Theme_Text_Color"
-        android:textSize="12dp"
+        android:textSize="14dp"
         android:fontFamily="@font/notosans_medium"
         android:includeFontPadding="false"
         android:layout_width="wrap_content"
