--- a/app/src/main/res/layout/fragment_time_peed_.xml
+++ b/app/src/main/res/layout/fragment_time_peed_.xml
@@ -19,9 +19,10 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
-            android:layout_marginLeft="12dp"
-            android:padding="12dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginLeft="6dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -100,7 +101,9 @@
             android:id="@+id/Time_Peed_Activity_FrameLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="6dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"></FrameLayout>
 
