--- a/app/src/main/res/layout/other_chatting_reply.xml
+++ b/app/src/main/res/layout/other_chatting_reply.xml
@@ -95,8 +95,9 @@
                 android:text="입력시간"
                 android:id="@+id/Chatting_WriteDate_TV"
                 android:layout_below="@id/Chatting_Text_Container"
-                android:layout_toRightOf="@id/Chatting_Text_Container"
+                android:layout_alignRight="@id/Chatting_Text_Container"
                 android:textSize="7dp"
+                android:paddingTop="4dp"
                 android:includeFontPadding="false"
                 android:fontFamily="@font/notosans_regular"
                 android:textColor="@color/Theme_Text_Color"
