--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -32,6 +32,7 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearLayout"
+        android:paddingTop="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -46,8 +47,8 @@
             <ImageView
                 android:id="@+id/noti_icon"
                 style="@style/Theme.AppCompat.Light"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@mipmap/main_app_icon_round"
                 app:srcCompat="@drawable/user_profile_default_img" />
 
@@ -55,25 +56,25 @@
 
         <LinearLayout
             android:layout_width="0dp"
+            android:padding="4dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/noti_title"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:fontFamily="@font/notosans_medium"
                 android:textSize="16dp"
-                android:paddingBottom="3dp"
                 android:text="Title"
                 android:textColor="@color/Notify_TitleColor"/>
 
             <TextView
                 android:id="@+id/noti_message"
-                android:layout_marginTop="8dp"
+                android:paddingTop="2dp"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
