--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -1,73 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="220dp"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="270dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
-    android:background="@android:color/transparent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="2dp">
-    <RelativeLayout
-        android:layout_weight="4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/Chatting_User_Img_CIV"
-        android:src="@drawable/user_profile_default_img"
-        android:layout_marginTop="2dp"
-        app:civ_border_width="0.2dp"
-        app:civ_border_color="@color/Theme_Color"
-        android:layout_width="35dp"
-        android:layout_height="35dp">
-    </de.hdodenhof.circleimageview.CircleImageView>
+    android:background="@android:color/transparent">
 
-    <TextView
-        android:id="@+id/Chatting_User_Name_TV"
-        android:textSize="14dp"
-        android:text="유저 이름"
-        android:includeFontPadding="false"
-        android:fontFamily="@font/notosans_medium"
-        android:layout_marginLeft="4dp"
-        android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
-        android:textColor="@color/Theme_Text_Color"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </TextView>
-    <RelativeLayout
-        android:id="@+id/Chatting_Text_Container"
-        android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
-        android:layout_below="@id/Chatting_User_Name_TV"
-        android:padding="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/Chatting_User_Img_CIV"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/user_profile_default_img"
+            app:civ_border_color="@color/Theme_Color"
+            app:civ_border_width="0.2dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></de.hdodenhof.circleimageview.CircleImageView>
+
         <TextView
-            android:id="@+id/Chatting_Text_TV"
-            android:background="@drawable/other_chat_background"
-            android:gravity="left"
-            android:padding="8dp"
-            android:includeFontPadding="false"
+            android:id="@+id/Chatting_User_Name_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
             android:fontFamily="@font/notosans_medium"
-            android:text="내용입력창입니다."
+            android:includeFontPadding="false"
+            android:text="유저 이름"
             android:textColor="@color/Theme_Text_Color"
             android:textSize="14dp"
+            app:layout_constraintStart_toEndOf="@+id/Chatting_User_Img_CIV"
+            app:layout_constraintTop_toTopOf="parent"></TextView>
+
+        <RelativeLayout
+            android:id="@+id/Chatting_Text_Container"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </TextView>
-        <TextView
-            android:text="입력시간"
-            android:id="@+id/Chatting_WriteDate_TV"
-            android:layout_toRightOf="@id/Chatting_Text_TV"
-            android:layout_below="@id/Chatting_Text_TV"
-            android:textSize="7dp"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/notosans_regular"
-            android:textColor="@color/Theme_Text_Color"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </TextView>
-            </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Chatting_User_Name_TV"
+            android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
+            android:paddingTop="4dp"
+            app:layout_constraintStart_toEndOf="@+id/Chatting_User_Img_CIV"
+            app:layout_constraintTop_toBottomOf="@+id/Chatting_User_Name_TV">
+
+            <TextView
+                android:id="@+id/Chatting_Text_TV"
+                android:maxWidth="180dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/other_chat_background"
+                android:fontFamily="@font/notosans_medium"
+                android:gravity="left"
+                android:includeFontPadding="false"
+                android:paddingLeft="8dp"
+                android:paddingTop="8dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="8dp"
+                android:text="내용입력창입니다."
+                android:textColor="@color/Theme_Text_Color"
+                android:textSize="14dp"></TextView>
         </RelativeLayout>
-</LinearLayout>
+
+        <TextView
+            android:id="@+id/Chatting_WriteDate_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Chatting_Text_Container"
+            android:layout_alignParentEnd="true"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
+            android:text="입력시간"
+            android:textColor="@color/Theme_Text_Color"
+            android:textSize="7dp"
+            app:layout_constraintStart_toEndOf="@+id/Chatting_Text_Container"
+            app:layout_constraintTop_toBottomOf="@+id/Chatting_Text_Container"></TextView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
