--- a/app/src/main/res/layout/post_view_item.xml
+++ b/app/src/main/res/layout/post_view_item.xml
@@ -54,7 +54,7 @@
                 android:textSize="14dp"
                 android:fontFamily="@font/notosans_medium"
                 android:includeFontPadding="false"
-                android:textColor="@color/Theme_Color"
+                android:textColor="@color/white"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/Post_View_User_Img"
                 android:layout_marginLeft="4dp"
@@ -65,7 +65,7 @@
                     android:id="@+id/Post_User_Location"
                     android:text="User_Location"
                     android:textSize="12dp"
-                    android:textColor="@color/Post_Titel_Container_Color"
+                    android:textColor="@color/trans_60_light_white"
                     android:fontFamily="@font/notosans_medium"
                     android:layout_below="@id/Post_View_User_Name"
                     android:layout_toRightOf="@id/Post_View_User_Img"
