--- a/app/src/main/res/layout/activity_user_profile_view.xml
+++ b/app/src/main/res/layout/activity_user_profile_view.xml
@@ -66,7 +66,7 @@
                     android:layout_marginTop="6dp"
                     android:layout_marginLeft="6dp"
                     android:src="@drawable/default_profile_img"
-                    app:civ_border_color="@color/Transparent_Green"
+                    app:civ_border_color="@color/Sub_Tutle_Color"
                     app:civ_border_width="1dp">
                 </de.hdodenhof.circleimageview.CircleImageView>
 
@@ -175,6 +175,7 @@
                                 android:textColor="@color/black"></de.hdodenhof.circleimageview.CircleImageView>
                             <TextView
                                 android:id="@+id/User_Profile_Posts_Count_Tv"
+                                android:visibility="gone"
                                 android:layout_centerInParent="true"
                                 android:layout_toRightOf="@id/User_Profile_Post_Civ"
                                 android:layout_marginLeft="6dp"
@@ -211,6 +212,7 @@
                         </de.hdodenhof.circleimageview.CircleImageView>
                         <TextView
                             android:id="@+id/User_Profile_Friends_Count_Tv"
+                            android:visibility="gone"
                             android:layout_centerInParent="true"
                             android:layout_toRightOf="@id/User_Profile_Friend_Civ"
                             android:layout_marginLeft="6dp"
